--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "18.2.0",
     "react-dom": "18.0.0",
     "react-native": "0.72.4",
+    "react-native-collapsible": "^1.6.1",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-image-picker": "^7.0.0",
     "react-native-safe-area-context": "3.3.2",
