--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-dom": "18.0.0",
-    "react-native": "0.72.4",
+    "react-native": "^0.72.6",
+    "react-native-calendars": "^1.1302.0",
     "react-native-collapsible": "^1.6.1",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-image-picker": "^7.0.0",
-    "react-native-safe-area-context": "3.3.2",
+    "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.25.0",
     "react-native-svg": "12.1.1",
     "react-native-vector-icons": "^10.0.0"
